Fix letter spacing

--- a/src/stylesheets/base/_custom.scss
+++ b/src/stylesheets/base/_custom.scss
@@ -53,7 +53,7 @@ h6,
 
 h1,
 .h1 {
-  letter-spacing: 2px;
+  letter-spacing: 5.5px;
 }
 
 h2,
